--- a/index.Rmd
+++ b/index.Rmd
@@ -13,3 +13,11 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ```
 
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+```
+
+
+![alt text](./Desktop/fotoa.png )
+
